# blackbox-tools

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  Makefile  Readme.md  setup-dev.ps1  vcpkg-configuration.cmake  vcpkg.json
.github/workflows/: artifact-links.yml  ci.yml  hide-artifact-links.yml  manual-build.yml  nightly.yml  release.yml
lib/getopt_mb_uni/: getopt.c  getopt.h
src/: blackbox_decode.c  blackbox_fielddefs.c  blackbox_fielddefs.h  blackbox_render.c  encoder_testbed.c  encoder_testbed_io.c  gpxwriter.c  gpxwriter.h  parser.c  parser.h  platform.c  platform.h  semver.c  semver.h  stream.c  stream.h  tools.c  units.c  units.h  utils.c  utils.h
utils/: astyle.sh  check_astyle.sh
visual-studio/: Baseflight blackbox tools.sln  Directory.Build.props
visual-studio/blackbox_decode/: blackbox_decode.vcxproj
visual-studio/blackbox_render/: blackbox_render.vcxproj
visual-studio/encoder_testbed/: encoder_testbed.vcxproj
